--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
    <head>
       <meta charset="utf-8">
       <title>  Магазин   </title>
+      <link href="css/style.css" rel="stylesheet">
    </head>	  
 
 <body>
@@ -61,32 +62,32 @@
 	    <h2 class="visually-hidden">Список средств для ухода</h2>
 		<ul class="catalog-list">
 		   <li class="catalog-items"> <h3> <a href="catalog-items.html"> <span class="catalog-category"> Набор для путешествий </span> <span class="catalog-item-title"> «Baxter of California» </span> </a> </h3>
-		   <p><a href="catalog-items.html"><img src="http://placehold.it/150x100" alt=""> </a> </p>
+		   <p><a href="catalog-items.html"><img src="img/Layer 38.png" width="220" height="165" alt="Baxter of California"> </a> </p>
 			<p class="catalog-items-price"> <b> 2 900 ₽</b>
 			<a class="button" href="#"> Купить </a></p>
 			</li>
 			<li class="catalog-items"> <h3> <a href="catalog-items.html"> <span class="catalog-category"> Увлажняющий кондиционер </span> <span class="catalog-category"> «Baxter of California» </span> </a></h3> 
-            <p><a href="catalog-items.html"><img src="http://placehold.it/150x100" alt=""> </a> </p>
+            <p><a href="catalog-items.html"><img src="img/Layer 30.png" width="220" height="165" alt="Baxter of California"> </a> </p>
               <p class="catalog-items-price"> <b> 750 ₽ </b> 
 			  <a class="button" href="#"> Купить </a> </p>
 			</li>
 		    <li class="catalog-items"> <h3> <a href="catalog-items.html"> <span class="catalog-category"> Гель для волос </span> <span class="catalog-category"> «SUAVECITO» </span> </a></h3> 
-            <p><a href="catalog-items.html"><img src="http://placehold.it/150x100" alt=""> </a> </p>
+            <p><a href="catalog-items.html"><img src="img/Layer 39.png" width="220" height="165" alt="SUAVECITO" > </a> </p>
               <p class="catalog-items-price"> <b> 290 ₽ </b> 
 			  <a class="button" href="#"> Купить </a> </p>
 			</li>
 			<li class="catalog-items"> <h3> <a href="catalog-items.html"> <span class="catalog-category"> Глина для укладки волос </span> <span class="catalog-category"> «AMERICAN CREW» </span> </a></h3> 
-            <p><a href="catalog-items.html"><img src="http://placehold.it/150x100" alt=""> </a> </p>
+            <p><a href="catalog-items.html"><img src="img/Layer 32.png" width="220" height="165" alt="AMERICAN CREW"> </a> </p>
               <p class="catalog-items-price"> <b> 500 ₽ </b> 
 			  <a class="button" href="#"> Купить </a> </p>
 			</li>
 			<li class="catalog-items"> <h3> <a href="catalog-items.html"> <span class="catalog-category"> Гель для волос </span> <span class="catalog-category"> «AMERICAN CREW» </span> </a></h3> 
-            <p><a href="catalog-items.html"><img src="http://placehold.it/150x100" alt=""> </a> </p>
+            <p><a href="catalog-items.html"><img src="img/Layer 33.png" width="220" height="165" alt="AMERICAN CREW"> </a> </p>
               <p class="catalog-items-price"> <b> 300 ₽ </b> 
 			  <a class="button" href="#"> Купить </a> </p>
 			</li>
-			<li class="catalog-items"> <h3> <a href="catalog-items.html"> <span class="catalog-category"> Набор для бритья </span> <span class="catalog-category"> «AMERICAN CREW» </span> </a></h3> 
-            <p><a href="catalog-items.html"><img src="http://placehold.it/150x100" alt=""> </a> </p>
+			<li class="catalog-items"> <h3> <a href="catalog-items.html"> <span class="catalog-category"> Набор для бритья </span> <span class="catalog-category"> «Baxter of California» </span> </a></h3> 
+            <p><a href="catalog-items.html"><img src="img/Layer 42.png" width="220" height="165" alt="Baxter of California"> </a> </p>
               <p class="catalog-items-price"> <b> 3900 ₽ </b> 
 			  <a class="button" href="#"> Купить </a> </p>
 			</li>
