--- a/catalog-item.html
+++ b/catalog-item.html
@@ -3,6 +3,7 @@
   <head>
        <meta charset="utf-8">
        <title> Карточка товара </title>
+       <link href="css/style.css" rel="stylesheet">
   </head> 
   <body>
     <header class="main-header">
@@ -33,12 +34,12 @@
 	<section class="product-photos">
 	  <h2 class="visually-hidden"> Изображения товара </h2>
 	   <p class="product-photos-full">
-	     <img src="img/product-big.jpg" width="460" height="498" alt=" Фото всего набора">
+	     <img src="img/Layer 47.png" width="460" height="498" alt=" Фото всего набора">
 	   </p> 
 	   <ul class="product-photo-prewiew">
-	      <li> <img src="img/product-small-1.jpg" width="140" height="149" alt="Фото в анфас"> </li>
-	      <li> <img src="img/product-small-2.jpg" width="140" height="149" alt="Фото в профиль"> </li>
-	      <li> <img src="img/product-small-3.jpg" width="140" height="149" alt="Фото отдельной части"> </li>
+	      <li> <img src="img/Layer 45.png" width="140" height="149" alt="Фото в анфас"> </li>
+	      <li> <img src="img/Layer 46.png" width="140" height="149" alt="Фото в профиль"> </li>
+	      <li> <img src="img/Layer 47 copy.png" width="140" height="149" alt="Фото отдельной части"> </li>
 	   </ul>	   
 	</section>  
 	<section class="product-info">
