--- a/items.html
+++ b/items.html
@@ -1,4 +1,4 @@
-<!Document HTML>
+<!Doctype HTML>
 <html>
   <head>
         <meta charset="utf-8">
@@ -18,8 +18,10 @@
 	                        <li><a href="contacts.html">Кониакты</a></li>
 	                  </ul>
 	                  <ul class="usre-navigation">
-	                       <li class="login-link"> Вход </li>
-                      </ul>
+	                       <li class="login-link"> 
+                           <a class="login-link" href="login.html"> Вход <a>
+                         </li>
+                    </ul>
            </nav>
  
        </header>
@@ -61,8 +63,8 @@
 	<figure class="gallery-content">
 	<a href="#"><img src="img/studio.jpg" width="286" height="164" alt="интерьер"></a>
 	</figure>
-	<span class="button gallery-botton-button-back">Назад</span>
-	<span class="button gallery-botton-button-next">Вперед</span>
+	<button class="button gallery-botton gallery-button-back" type="button">Назад</button>
+	<button class="button gallery-botton gallery-button-next">Вперед</button>
 	</section>
 	<section class="contact">
 	   <h2>Контактная информация</h2>
@@ -83,17 +85,21 @@
 	  <h2>Записаться</h2>
 	  <p class="appointment-info"> Укажите желаемую дату и время и мы сважемся с вами  для подтверждения брони</p>
 	  <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
-	  <p class="appointment-input"> Датa
-	     <input type="text" name="date" value="" placeholder="08.10.2017"> 
+	  <p class="appointment-input">
+    <label for="appointment-date"> Датa </label>
+	     <input id="appointment-date" type="text" name="date" value="" placeholder="08.10.2017"> 
 	  </p>
-	  <p class="appointment-input"> Время
-		 <input type="text" name="time" value="" placeholder="10:00">
+	  <p class="appointment-input">
+    <label for="appointment-time"> Время </label>
+		 <input id="appointment-time" type="text" name="time" value="" placeholder="10:00">
 	  </p>	 
-	  <p class="appointment-input"> Ваше имя
-		 <input type="text" name="name" value="" placeholder="Борода">
+	  <p class="appointment-input"> 
+    <label for="appointment-name"> Ваше имя </label>
+		 <input id="appointment-name" type="text" name="name" value="" placeholder="Борода">
 	 </p>
-     <p class="appointment-input"> Телефон	 
-		 <input typr="tel" name="phone" value="" placeholder="+7 123 456-78-90">
+     <p class="appointment-input"> 
+     <label for="appointment-phone"> Телефон </label>
+		 <input id="appointment-phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
 	 </p> 	 
 	 <button class="button" type="submit"> Отправит </button>
 	  <form>
@@ -125,11 +131,28 @@
 <p> Ведите свой логин и пароль.<p>
 <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
 <p>
-  <input class="login-icon-user" type="text" name="login" placeholder="Логин">
+  <label class="visually-hidden" for="user-login"> Логин </label>
+  <input class="login-icon-user" id="user-login" type="text" name="login" placeholder="Логин">
 </p>
 <p> 
-  <input class="login-icon-password" type="password" name="password" placeholder="Пароль">
+  <label class="visually-hidden" for="user-password"> Пароль </label>
+  <input class="login-icon-password" id="user-password" type="password" name="password" placeholder="Пароль">
  </p> 
+  <p class="login-password-info">
+    <label class="login-checkbox">
+      <input type="chekbox" name="remember" class="visually-hidden"> Запомните меня  </label>
+    <a class="restore" href="#"> Я забыл пароль! </a>
+  </p>  
+  <button class="button" type="submit"> Войти </button>
  </form>
+  <buttom class="modal-close" type="close">Закрыть</buttom>
+    </section>
+<section class="modal modal-map">
+  <h2 class="visually-hidden"> Как до нас добраться </h2>
+  <p>
+    <img src="img/map.jpg" width="780" height="560" alt="Карта">
+  </p>  
+  <buttom class="modal-close" type="close">Закрыть</buttom>
+</section>
 </body>
 </html>
