--- a/items.html
+++ b/items.html
@@ -145,14 +145,14 @@
   </p>  
   <button class="button" type="submit"> Войти </button>
  </form>
-  <buttom class="modal-close" type="close">Закрыть</buttom>
+  <button class="modal-close" type="close">Закрыть</button>
     </section>
 <section class="modal modal-map">
   <h2 class="visually-hidden"> Как до нас добраться </h2>
   <p>
     <img src="img/map.jpg" width="780" height="560" alt="Карта">
   </p>  
-  <buttom class="modal-close" type="close">Закрыть</buttom>
+  <button class="modal-close" type="close">Закрыть</button>
 </section>
 </body>
 </html>
