--- a/catalog.html
+++ b/catalog.html
@@ -37,12 +37,18 @@
 	    <fieldset>
 		   <legend> Производители </legend>
 		   <ul>
-		       <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" checked>  Baxter of California </li>
-		       <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="mr-natty" checked> Mr Natty </li>
-			   <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="suavecito" checked> Suavecito </li>
-			   <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="malin+goetz" checked>Malin+Goetz </li>
-			   <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="murray's" checked> Murray's </li>
-			   <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="american crew" checked>American Crew </li>
+		       <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" id="baxter-of-california" checked > 
+             <label for="baxter-of-california">  Baxter of California </label> </li>
+		       <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="mr-natty" id="Mr-Natty" checked> 
+             <label for="Mr-Natty"> Mr Natty </label> </li>
+			   <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="suavecito" id="Suavecito" checked>
+           <label for="Suavecito"> Suavecito </label> </li>
+			   <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="malin+goetz" id="malin-goetz" checked>
+           <label for="malin-goetz"> Malin Goetz </label> </li>
+			   <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="murray's" id="murray's" checked>
+           <label for="murray's"> Murray's </label> </li>
+			   <li class="filter-option"> <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="american crew" id="American-Crew" checked> 
+           <label for="American-Crew">American Crew </label></li>
 		   </ul>
 		
 		</fieldset>
@@ -50,7 +56,7 @@
 		<fieldset>
 		    <legend> Группы товара</legend>
 			<ul> 
-			    <li class="filter-option"> <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product group" value="shaving"> Бритвенные принадлежности</li>
+			  <li class="filter-option"> <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product group" value="shaving"> Бритвенные принадлежности</li>
 				<li class="filter-option"> <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product group" value="hair-care"> Средства для ухода</li> 
 				<li class="filter-option"> <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product group" value="accessories"> Аксессуары</li>
 		    </ul>	
