--- a/catalog.html
+++ b/catalog.html
@@ -56,9 +56,12 @@
 		<fieldset>
 		    <legend> Группы товара</legend>
 			<ul> 
-			  <li class="filter-option"> <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product group" value="shaving"> Бритвенные принадлежности</li>
-				<li class="filter-option"> <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product group" value="hair-care"> Средства для ухода</li> 
-				<li class="filter-option"> <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product group" value="accessories"> Аксессуары</li>
+			  <li class="filter-option"> <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product group" value="shaving" id="filter-shaving">
+          <label for="filter-shaving"> Бритвенные принадлежности </label> </li>
+				<li class="filter-option"> <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product group" value="hair-care" id="filter-care"> 
+          <label for="filter-care"> Средства для ухода </label></li> 
+				<li class="filter-option"> <input class="visually-hidden filter-input filter-input-radio" type="radio" name="product group" value="accessories" id="filter-accessories"> 
+          <label for="filter-accessories">Аксессуары </label> </li>
 		    </ul>	
         </fieldset>			
 			<button type="submit" class="filter-button button"> Показать </button>
