--- a/catalog-item.html
+++ b/catalog-item.html
@@ -32,15 +32,32 @@
 	  <li class="breadcrumbs-current">Набор для путешествий "Baxter of California"</li>
 	</ul>  
 	<section class="product-photos">
-	  <h2 class="visually-hidden"> Изображения товара </h2>
+	  <h2 class="visually-hidden" id="product-image"> Изображения товара </h2>
 	   <p class="product-photos-full">
+       <lable for="product-image">
 	     <img src="img/Layer 47.png" width="460" height="498" alt=" Фото всего набора">
+       </lable> 
 	   </p> 
 	   <ul class="product-photo-prewiew">
-	      <li> <img src="img/Layer 45.png" width="140" height="149" alt="Фото в анфас"> </li>
-	      <li> <img src="img/Layer 46.png" width="140" height="149" alt="Фото в профиль"> </li>
-	      <li> <img src="img/Layer 47 copy.png" width="140" height="149" alt="Фото отдельной части"> </li>
-	   </ul>	   
+	      <li> 
+          <h2 class="visually-hidden" id="foto-in-full-face"> Фото в анфас </h2>
+       <lable for="foto-in-full-face">
+          <img src="img/Layer 45.png" width="140" height="149" alt="Фото в анфас">
+       </lable>
+        </li>
+        <li>
+          <h2 class="visually-hidden" id="photo-profile"> Фото в профиль </h2>
+          <lable for="photo-profile">
+            <img src="img/Layer 46.png" width="140" height="149" alt="Фото в профиль"> 
+          </lable>  
+        </li>
+	      <li> 
+         <h2 class="visually-hidden" id="photo-part"> Фото отдельной части </h2> 
+          <lable for="photo-part">
+          <img src="img/Layer 47 copy.png" width="140" height="149" alt="Фото отдельной части">
+       </lable> 
+    </li>
+         </ul>	   
 	</section>  
 	<section class="product-info">
 	   <h2 class="visually-hidden"> Описание товара </h2>
