--- a/items.html
+++ b/items.html
@@ -70,7 +70,7 @@
 	          <button class="button gallery-botton gallery-button-next">Вперед</button>
 	       </section>
        </div>
-       <div class="index-columns2">
+       <div class="index-columns">
        	<section class="contact">
 	        <h2>Контактная информация</h2>
 	        <p>Барбершоп "Бородинский"<br>
@@ -78,10 +78,10 @@
 	           Телефон: +7 (812) 666 -02-66
 	        </p>
 	        <p>
-	   Время работы:<br>
-	   пн-пт: с 10:00 до 22:00 <br>
-	   cб-вс: c 10:00 до 19:00 <br>
-	   </p>
+	          Время работы:<br>
+	          пн-пт: с 10:00 до 22:00 <br>
+	          cб-вс: c 10:00 до 19:00 <br>
+	         </p>
 	   <a class="button contacs-button" href="map.html">Как проехать</a>
 	   <a class="button contacs-button" href="contacs.html"> Обратная связь </a>
 	</section>
@@ -99,12 +99,12 @@
 	  </p>	 
 	  <p class="appointment-input"> 
     <label for="appointment-name"> Ваше имя </label>
-		 <input id="appointment-name" type="text" name="name" value="" placeholder="Борода">
-	 </p>
-     <p class="appointment-input"> 
-     <label for="appointment-phone"> Телефон </label>
-		 <input id="appointment-phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
-	 </p> 	 
+	  <input id="appointment-name" type="text" name="name" value="" placeholder="Борода">
+	  </p>
+    <p class="appointment-input"> 
+    <label for="appointment-phone"> Телефон </label>
+		<input id="appointment-phone" type="tel" name="phone" value="" placeholder="+7 123 456-78-90">
+	  </p> 	 
 	 <button class="button" type="submit"> Отправит </button>
 	  </form>
 	  </section>
