--- a/items.html
+++ b/items.html
@@ -14,6 +14,7 @@
              <a class="main-header-logo">
                 <img src="img/index-logo.svg" width="368" height="153" alt="Логотип бербершопа Бородинский">
 	           </a>
+             <div class="main-navigation-wrapper">
 			          <ul class="site-navigartion">
 	                        <li><a href="info.html">Информация</a></li>
 	                        <li><a href="news.html">Hовости</a></li>
@@ -26,6 +27,7 @@
                            <a class="login-link" href="login.html"> Вход </a>
                          </li>
                  </ul>
+            </div>
            </nav>
  
        </header>
