--- a/items.html
+++ b/items.html
@@ -15,6 +15,7 @@
                 <img src="img/index-logo.svg" width="368" height="153" alt="Логотип бербершопа Бородинский">
 	           </a>
              <div class="main-navigation-wrapper">
+               <div class="container">
 			          <ul class="site-navigartion">
 	                        <li><a href="info.html">Информация</a></li>
 	                        <li><a href="news.html">Hовости</a></li>
@@ -27,6 +28,7 @@
                            <a class="login-link" href="login.html"> Вход </a>
                          </li>
                  </ul>
+               </div>
             </div>
            </nav>
  
