--- a/items.html
+++ b/items.html
@@ -117,6 +117,7 @@
     </div>     
     </main>	
 	<footer class="main-footer">
+  <div class="container">
 	<p class="footer-contacts">
 	Барбершоп "Бородинский"<br>
 	   Адрес:г.Санкт-Петербург, Б.Конюшенная, д. 19/8 <br>
@@ -124,17 +125,18 @@
 	   Телефон: +7 (812) 666 -02-66
 	</P>
 	<div class="footer-social">
-	<b>Давай  дружить!</b>
-	<ul>
-	 <li><a class="social-button" href="#"> В контакте </a> </li>
-	 <li><a class="social-button" href="#"> Фейсбук </a> </li>
-	 <li><a class="social-button" href="#"> Инстаграм </a> </li>
-	</ul> 
+	   <b>Давай  дружить!</b>
+	    <ul>
+	     <li><a class="social-button" href="#"> В контакте </a> </li>
+	     <li><a class="social-button" href="#"> Фейсбук </a> </li>
+	     <li><a class="social-button" href="#"> Инстаграм </a> </li>
+	    </ul> 
 	</div>
 	<p class="footer-copyright">
 	<b>Разработано:</b>
 	<a class="button" href="https://htmlacademy.ru">HTML Academy</a>
 	</p>
+  </div>
 </footer>	
 
 <section class="modal modal-login">
