--- a/items.html
+++ b/items.html
@@ -10,7 +10,7 @@
   </head>
 <body>
       <header class="main-header">
-          <nav class="main-navigartion">
+          <nav class="main-navigation">
              <a class="main-header-logo">
                 <img src="img/index-logo.svg" width="368" height="153" alt="Логотип бербершопа Бородинский">
 	           </a>
